app basename mail sendgrid mail new account

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -3,3 +3,13 @@ error.title=Votre demande ne peut être traitée
 error.subtitle=Désolé, une erreur s'est produite.
 error.status=Status:
 error.message=Message:
+
+mail.new.password.title = Votre compte Never Back Down
+mail.new.password.hello=Salut {0} {1},
+mail.new.password.text1=Ton compte est activé.
+mail.new.password.text2=Voici tes identifiants de connexion:
+mail.new.password.login=Identifiant: {0}
+mail.new.password.password=Mot de passe: {0}
+mail.new.password.link=Clique ici pour te connecter à l'application
+mail.new.password.link.alternative=Ou bien ajoute ce lien à tes favoris:
+email.signature=Never Back Down
